[package]
name = "benchmark_from_crates"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = {version = "0.17.7", features = ["rayon"]}
crates-index = { version="2", features=["git", "git-https", "parallel"] }
rayon = "1.9"
semver = { version = "1" , features=[ "serde" ] }
serde = { version = "1.0", features = ["derive"] }
ron = "0.6"
semver-pubgrub = { git="https://github.com/pubgrub-rs/semver-pubgrub", features=["serde"] }
pubgrub = { git="https://github.com/pubgrub-rs/pubgrub", branch="dev", features=["serde"] }
itertools = "0.12.1"
csv = "1.3.0"
